[package]
name = "xlm"
description = "A painless way to use XIVLauncher on Steam Deck & Linux."
authors = ["Blooym"]
repository = "https://github.com/Blooym/xlm"
version = "0.3.12"
edition = "2024"

[features]
default = ["self_update"]
self_update = ["dep:self_update"]

[dependencies]
bytes = "1.10.1"
clap = { version = "4.5.47", features = ["derive", "string"] }
dirs = "6.0.0"
eframe = { default-features = false, version = "0.32.1", features = [
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }
flate2 = "1.1.2"
octocrab = "0.44.1"
reqwest = { version = "0.12.23", default-features = false, features = [
    "rustls-tls",
    "http2",
    "charset",
] }
tar = "0.4.44"
tokio = { version = "1.47.1", features = ["rt", "macros", "process"] }
anyhow = "1.0.99"
simplelog = "0.12.2"
log = "0.4.27"
self_update = { version = "0.42.0", optional = true, default-features = false, features = [
    "rustls",
    "archive-tar",
    "compression-flate2",
] }

[profile.release]
lto = true
codegen-units = 1
