[package]
name = "xlm"
description = "A painless way to use XIVLauncher on Steam Deck & Linux."
authors = ["Blooym"]
repository = "https://github.com/Blooym/xlm"
version = "0.3.13"
edition = "2024"

[features]
default = ["self_update"]
self_update = ["dep:self_update"]

[dependencies]
bytes = "1.11.0"
clap = { version = "4.5.54", features = ["derive", "string", "env"] }
dirs = "6.0.0"
eframe = { default-features = false, version = "0.33.3", features = [
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }
flate2 = "1.1.8"
octocrab = "0.49.5"
reqwest = { version = "0.13.1", default-features = false, features = [
    "rustls",
    "http2",
    "charset",
    "system-proxy",
] }
tar = "0.4.44"
tokio = { version = "1.49.0", features = ["rt", "macros", "process"] }
anyhow = "1.0.100"
simplelog = "0.12.2"
log = "0.4.29"
self_update = { version = "0.42.0", optional = true, default-features = false, features = [
    "rustls",
    "archive-tar",
    "compression-flate2",
] }

[profile.release]
lto = true
codegen-units = 1
