[package]
name = "xlm"
description = "A painless way to use XIVLauncher on Steam Deck & Linux."
authors = ["Blooym"]
repository = "https://github.com/Blooym/xlm"
version = "0.3.14"
edition = "2024"

[features]
default = ["self_update"]
self_update = ["dep:self_update"]

[dependencies]
bytes = "1.11.1"
clap = { version = "4.6.0", features = ["derive", "string", "env"] }
dirs = "6.0.0"
eframe = { default-features = false, version = "0.34.1", features = [
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }
flate2 = "1.1.9"
octocrab = "0.49.7"
reqwest = { version = "0.13.2", default-features = false, features = [
    "rustls",
    "http2",
    "charset",
    "system-proxy",
] }
tar = "0.4.45"
tokio = { version = "1.51.1", features = ["rt", "macros", "process"] }
anyhow = "1.0.102"
self_update = { version = "0.42.0", optional = true, default-features = false, features = [
    "rustls",
    "archive-tar",
    "compression-flate2",
] }
rustls = "0.23.37"
winit = { version = "0.30.13", features = ["x11", "wayland"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
